@@ -57,7 +57,7 @@ AUX stubs/gcc-3.4-ssp-stub.patch 1068 RMD160 a72cfd5921084366d8ed93786254c37b3cd
 AUX stubs/gcc-4.0-htb-stub.patch 722 RMD160 c2f98915d90365d0823721ae6ad80bc6820eef65 SHA1 a1226eb412b98fb02d1bd3a5ab3b8a2a171a55fe SHA256 e9b63d3644c0c10e871d5bd94ceae55bec0726b76e9a7c43c83daf6c840dfb5c
 AUX stubs/gcc-4.0-ssp-stub.patch 1068 RMD160 a72cfd5921084366d8ed93786254c37b3cd782e1 SHA1 84ff7b2dd5dadf996cc6ab7bf13f6e4e95ae85e6 SHA256 259b08fc6ba1a5fcc6848c1a0742e9b90dd43985c61fab4ea2e9e79ec795d982
 DIST bounds-checking-gcc-3.3.6-1.00-r1.patch.bz2 829063 RMD160 a5b0c3abe9bbec8b539920593bfb8b1b2cd1628d SHA1 49c6585f3c3b4af472aa48ef9eed279b78c2c7b6 SHA256 56eeeef1549381f341ed0cfc99f19289bc9e9b5601466e6b2b9dba5c43649017
-DIST bounds-checking-gcc-3.4.4-1.00.patch.bz2 815608 RMD160 b5e1d4716a5ab881b5d7742bb6650e0492edce93 SHA1 dad2fea0818e8361eba78ad01020769067cd9c3f SHA256 a29adc9260071f5928f2e491803b73117ee176e4b19b56ce421aa3ca461370b2
+DIST bounds-checking-gcc-3.4.4-1.00.1.patch.bz2 815566 RMD160 8f303a9a8bd3f1a88d91b2be9ddb6d1a699abd03 SHA1 7cc5edcaeac14ccbf894cadd915b80848f31d6c6 SHA256 6568f904eb26ff4bc90e23792b3346aaf98c0ffe38a1abe853d823b3c2157e96
 DIST ecj-4.3.jar 1377431 RMD160 48fa985f763838bed750aa64a2fa997734438099 SHA1 da254944309a8387aa39323fe7bb7216a4518311 SHA256 9de193ea393ed50d868b730bad6916f7a8ef4ba80216f8606d3e1a0dd886e74b
 DIST gcc-2.95.3-patches-1.2.tar.bz2 121655 RMD160 e6a8a50538587f5ad3721816271cfc927c3af90e SHA1 2bd8c0bd4b25a8908955701f80b5f284bd7591bc SHA256 c2ee770bcf7cc45e6dbc7f89514b378ca780c7ee0f8d30550eb897e925ee4eca
 DIST gcc-2.95.3-patches-1.3.tar.bz2 116975 RMD160 035b33d5477bf0f9078cfdb7d07afd6f5ef80023 SHA1 9eef5b27a74705066339339cabaf380cbad364bc SHA256 4e437c8d0e176ad626918963ee2a7976353a2010a08c48498f24c2f85c542c3c
@@ -105,9 +105,11 @@ DIST gcc-4.3.2-specs-0.9.4.tar.bz2 1521 RMD160 294e42dad478914e88db84693bb1cd4cf
 DIST gcc-4.3.2-uclibc-patches-1.0.tar.bz2 17849 RMD160 971e1c91265560ebf26e40acb627360eef31d04b SHA1 c2d8c28620a609dc3c6c5e44002fb2149670fd7a SHA256 6872b135638094002164fcddb9937301245d0b24e10619ffa7334b4ebf29183a
 DIST gcc-4.3.2.tar.bz2 58929447 RMD160 0ced28bd2e0d89f081cf88273b5f1530599b52fb SHA1 787b566ad4f386a9896e2d5703e6ff5e7ccaca58 SHA256 bfbf487731ad5dca37efe480a837417de071bd67e685d5c1df6a290707575165
 DIST gcc-4.3.3-patches-1.0.tar.bz2 72490 RMD160 047ea4b6e70d30cb7a26cadbd84d01793e852870 SHA1 a78152a1def2a0f5a76cde3f65ecb8fcb2fa258b SHA256 e0042c39d811172206df87ed68d8c7d44d06eee2d6339173756ebc12a949a88e
+DIST gcc-4.3.3-patches-1.1.tar.bz2 75764 RMD160 6bf733f7c4c1cdc125ec017b765a966bffdab0af SHA1 03f8e3756aeddabad41f840cd2212d8b806237ca SHA256 c2142a06ae24644edb0aff5fc2e01fd09ab160856dcbab814718928e4443f09f
 DIST gcc-4.3.3-piepatches-v10.1.5.tar.bz2 6036 RMD160 c5e44d583cfc9328fcc0c5ab4026393c28fdba3f SHA1 ff2e9fd4f238523d19806a05f84f1aa5a4c2149b SHA256 7e7a799f9066ab5948ea7ac73b0cb75c91bfa9231bf618bdc0e132e40d6d88d5
 DIST gcc-4.3.3-specs-0.9.4.tar.bz2 1515 RMD160 3a94bf49e628b1714b93f471c363bf0e4ae5d9cd SHA1 e46cd31b4f020d2c6eba748217a921d2678e64b5 SHA256 1cfade221d3873e34bb4719297f0eb811e712d7f095a85dc9e2508e53ffe1cec
 DIST gcc-4.3.3-uclibc-patches-1.0.tar.bz2 17853 RMD160 7c523514c18bb59dc38869652c8fb559240a0859 SHA1 a8c7f81a2d5f4fad698749e0997cd5a86e3458f2 SHA256 4e7bb0381b07247ba32fc390e85e456aba868c1e6c2823d4bce77014cefa462a
+DIST gcc-4.3.3-uclibc-patches-1.1.tar.bz2 2294 RMD160 977c1733242e65c9705fe5e7c7cc92fc87d17c46 SHA1 6aa6bd21b5e7905bf39f3ff5bf3b606527cf7295 SHA256 a15737077039384932138a7c5f209e9a171ad756618a4ea078062816f028a77b
 DIST gcc-4.3.3.tar.bz2 59369954 RMD160 8c20a52633df659cabd66925d8a105a7a1479820 SHA1 e378b7a0cb0f7dbf6436f4efb5756e29a90fdc1c SHA256 309f614a3c7fee88edc4928ff17185a19533949a1642ccf776e87d86303704de
 DIST gdc-0.24-src.tar.bz2 1012099 RMD160 f0f33cc02d88ea1174030988c2006cb90029392a SHA1 2be913fe061429c1a279e4cf882e947d34946303 SHA256 cc6a97c76c9e6db31e76ff97014d24b3d43e21f018a3c6218e3fb2a4500fc79a
 DIST protector-3.2.2-10.tar.gz 24556 RMD160 905b1ef473435230f7f4519ecf0f8a3d4c66e4e5 SHA1 c3a45f3fc450f1bd282af88a94d4b3d427d23072 SHA256 ad8401650ee0f7162e844cea492aa6151de77e8d0236cacc999aada69d511bab
@@ -117,7 +119,7 @@ EBUILD gcc-3.1.1-r2.ebuild 9210 RMD160 206881516627ab93359924637597ea1675c132fd 
 EBUILD gcc-3.2.2.ebuild 509 RMD160 aea48d62c14870971ffc3edb5dacaa7936eeaa81 SHA1 19bfe77cc4fe37db0223edae2ccd9f5348e5305a SHA256 a2d240f60b6bd5a68d05eb99f64b3d0d1b600e6edecb44a64684e1447dea4c06
 EBUILD gcc-3.2.3-r4.ebuild 17618 RMD160 a046b0ff62564f18edfcc0a7db6866e10c49e80b SHA1 ab9887e8f256e30e5df119675a7df28e36e460ae SHA256 d6e17e37c7bc5d6462e0aea647d036f861922373b2d24556ff063f8a3f5e1cb4
 EBUILD gcc-3.3.6-r1.ebuild 2954 RMD160 3fb72ae69efb4e7a3b1fb253bb049b3430567279 SHA1 42e8d5331f8cbe8742fb23ba592284559e1ca743 SHA256 2675ca0b74691d1b932049af73c88415948fb414eb07f439e4de40906ca3d834
-EBUILD gcc-3.4.6-r2.ebuild 4971 RMD160 0324dc66c12e94017905947fcccc56bec92ca193 SHA1 1281d4d20b82b6bb63c0f982ec72875ce5013bb1 SHA256 8b84321a5ad0d40817cfa2b04cff5d4b41821f9c955475a97eb618d39038eb9f
+EBUILD gcc-3.4.6-r2.ebuild 4973 RMD160 b2ce92717c6e6788b6d181ae3e168feace02297a SHA1 6a5179579f75bda1fafcb992efad45d41e633b66 SHA256 9aab42adb6fa4f95d96d6e19bc95f4f46c62950756a755e6201eba232d83c37a
 EBUILD gcc-4.0.4.ebuild 1734 RMD160 a3a221476689e06c81f232d86148daeca8e0a449 SHA1 cd9c3efaad93f681ced5ed625181e1bc5e158cf7 SHA256 c359abd32991443fc39e13ed6013f64ac3944e84a622dcdda8ba9ef0d332d375
 EBUILD gcc-4.1.2.ebuild 1913 RMD160 5677c8ca7b0b6e5a2f9180be9a0942e1e0fc9e08 SHA1 cf797159574b6b3c00fe19be502b268affaba3f1 SHA256 33277a9ac4611a12625cbab5739f106c73afbb09c6a0832c8d0e145ca1fe41d1
 EBUILD gcc-4.2.4-r1.ebuild 1771 RMD160 37a97090dda690249394d6ec83ebb9901a4b1b78 SHA1 2c23f61121c9db83e6fc60b977b709f9b8253a9a SHA256 bc291c71afac693075efded7cc139435f54a551469c838da86201908547101de
@@ -127,13 +129,14 @@ EBUILD gcc-4.3.1.ebuild 1748 RMD160 b83c227483a7cd1ff3a669daf953ed1a79aca746 SHA
 EBUILD gcc-4.3.2-r2.ebuild 2191 RMD160 1f90accf384e4dbd0c9a00bb5704c3e70ce1b5be SHA1 916473e2fd29e9b1dd943ea493be9ceed8ffa9e6 SHA256 fd262f05924603ecaa4c693ca9b51ed61e000d38352b041ffc8720b23b5368f7
 EBUILD gcc-4.3.2-r3.ebuild 2197 RMD160 c41237b3cb8f59591392fcc531d6c5b63e5ab92a SHA1 6b71a9423761e13e1a2540f22a5a2c1fababcad6 SHA256 f07d1065fa7c153b37da3515d1b9707d8852fb05105edb31c6ebe3e6ccdf9f45
 EBUILD gcc-4.3.2.ebuild 1830 RMD160 a7c668a1a5eccc6cd3677b8b1e6ef7c7959654b9 SHA1 2de8b42473987ecf7b6f536f1175a26dda0aac99 SHA256 0e468ca360f261455968c7c988730a7b97b105a4b630fefc8554f7bf6c8e5171
+EBUILD gcc-4.3.3-r1.ebuild 2179 RMD160 5eacb05fbf4df33015e019b2e29a3d170d3b6180 SHA1 e1528e6d17ddf3cd797980b0010f711181d20076 SHA256 a78785f3d67c96322b2f17137a459b0c1d4a75fe578a344787987cd50c38d7a8
 EBUILD gcc-4.3.3.ebuild 2118 RMD160 34a7eae0a62dff9f40cd280d380638c630f50565 SHA1 6a5439a4df3ee86a42efaab80633dc63af0c02c0 SHA256 17e2ce72adca2cbed0bdc2f3595a4bcb81109bcfe2a462fb9a80015e18323ff8
-MISC ChangeLog 124042 RMD160 c589fa40dd2e74b24bf10c71f0396b95a0dfc797 SHA1 1cadf16124ad98097d020877daede8cbb27b1274 SHA256 fa4f57641e8f1c866a50f50e05c6f17d75c0e64de4ada0ebfefde56da69e1d65
+MISC ChangeLog 124198 RMD160 7b4078214f15b64556d20c69b90d92e77cf568c8 SHA1 7248e83627a54eb708792f2e7032ab3f364f743f SHA256 d45358f113253d5a3128efc7725f2592402056687dd302379f57e3c904764fca
 MISC metadata.xml 1478 RMD160 3c774d5ceb9dc77c4f164f1b808f8d4812feb06e SHA1 2784e14b4b5aff24f4e8b2931f622cf14d4d1b1a SHA256 340b1805c78481cc39a106bcb27742946a4dd2559fe536c57525f0c2358a41a2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.10 (GNU/Linux)
 
-iEYEARECAAYFAkmq9EIACgkQn/5bYzqsSmFm6gCeNjQXz3LqqP7lzBLww0m9g2Kd
-lyIAn0PRif62NTMDGWIuNqcLTI3sAtMW
-=e1dW
+iEYEARECAAYFAkm8q0IACgkQn/5bYzqsSmE7cwCdHflTWx6RD8GzZOKv9CEeOfny
+Y5gAoJOqfqwbenJmEExf13UPKI35zbxW
+=fiIr
 -----END PGP SIGNATURE-----
